Fix alignment and coloring on Settings page

--- a/web/src/app/Settings/BaseSettingsLayout/style.scss
+++ b/web/src/app/Settings/BaseSettingsLayout/style.scss
@@ -16,6 +16,7 @@
         }
         button {
             background-color: rgb(138, 43, 43) !important;
+            color: globalStyles.$light;
         }
     }
 }
